src/error
syntax.y:138:7: warning: conflicting types for ‘yyerror’ [enabled by default]
  void yyerror(const char *msg){
       ^
syntax.tab.c:1932:9: note: previous implicit declaration of ‘yyerror’ was here
         yyerror (yymsgp);
         ^
symbol_table.c: In function ‘buildVarDec’:
symbol_table.c:109:18: error: ‘SymbolNode’ has no member named ‘text’
   strcpy(new_node->text, temp->children[0]->text);
                  ^
symbol_table.c: At top level:
symbol_table.c:121:6: warning: conflicting types for ‘buildFunDec’ [enabled by default]
 void buildFunDec(Type node_type, TreeNode *p){
      ^
symbol_table.c:66:3: note: previous implicit declaration of ‘buildFunDec’ was here
   buildFunDec(node_type, p->children[1]);
   ^
symbol_table.c: In function ‘buildFunDec’:
symbol_table.c:122:28: warning: initialization makes pointer from integer without a cast [enabled by default]
  SymbolNode *symbol_temp = searchSymbol(p->children[0]->text);
                            ^
symbol_table.c:131:17: error: ‘SymbolNode’ has no member named ‘text’
  strcpy(new_node->text, p->children[0]->text);
                 ^
symbol_table.c:137:2: error: ‘SymbolStackHead’ undeclared (first use in this function)
  SymbolStackHead->func_ptr = new_node;
  ^
symbol_table.c:137:2: note: each undeclared identifier is reported only once for each function it appears in
symbol_table.c:162:22: error: ‘struct <anonymous>’ has no member named ‘argument_number’
   new_node->func_info.argument_number = 0;
                      ^
symbol_table.c: In function ‘buildStmt’:
symbol_table.c:184:51: error: ‘struct SymbolStackNode’ has no member named ‘func_info’
   if (func_field && typeEqual(func_field->func_ptr->func_info.return_value, buildExp(p->children[1])) == 0)
                                                   ^
symbol_table.c:184:3: error: invalid use of void expression
   if (func_field && typeEqual(func_field->func_ptr->func_info.return_value, buildExp(p->children[1])) == 0)
   ^
symbol_table.c: In function ‘buildExp’:
symbol_table.c:197:59: error: ‘struct SymbolStackNode’ has no member named ‘func_info’
   if (func_field != NULL && typeEqual(func_field->func_ptr->func_info.return_value, buildExp(p->children[1])) == 0)
                                                           ^
symbol_table.c:197:3: error: invalid use of void expression
   if (func_field != NULL && typeEqual(func_field->func_ptr->func_info.return_value, buildExp(p->children[1])) == 0)
   ^
In file included from symbol_table_toolfunction.c:2:0:
../include/symbol_table.h:16:12: error: ‘kMaxLen’ undeclared here (not in a function)
  char name[kMaxLen];
            ^
../include/symbol_table.h:44:22: error: unknown type name ‘TreeNode’
 void symbolTableMain(TreeNode *p);
                      ^
../include/symbol_table.h:45:23: error: unknown type name ‘TreeNode’
 void buildSymbolTable(TreeNode *p);
                       ^
../include/symbol_table.h:46:18: error: unknown type name ‘TreeNode’
 void buildExtDef(TreeNode *p);
                  ^
../include/symbol_table.h:47:15: error: unknown type name ‘TreeNode’
 void buildDef(TreeNode *p);
               ^
../include/symbol_table.h:48:16: error: unknown type name ‘TreeNode’
 void buildStmt(TreeNode *p);
                ^
../include/symbol_table.h:49:15: error: unknown type name ‘TreeNode’
 void buildExp(TreeNode *p);
               ^
../include/symbol_table.h:50:24: error: unknown type name ‘TreeNode’
 void buildVarDec(Type, TreeNode *);
                        ^
../include/symbol_table.h:51:21: error: unknown type name ‘TreeNode’
 Type buildSpecifier(TreeNode *p);
                     ^
symbol_table_toolfunction.c:3:34: error: unknown type name ‘TreeNode’
 void symbolError(char errorType, TreeNode *p){
                                  ^
symbol_table_toolfunction.c: In function ‘typeEqual’:
symbol_table_toolfunction.c:26:19: error: ‘NOTDEF’ undeclared (first use in this function)
  if (val1.type == NOTDEF || val2.type == NOTDEF) return -1;
                   ^
symbol_table_toolfunction.c:26:19: note: each undeclared identifier is reported only once for each function it appears in
symbol_table_toolfunction.c: In function ‘hash’:
symbol_table_toolfunction.c:72:18: error: ‘HASH_MASK’ undeclared (first use in this function)
   if (i = val & ~HASH_MASK)
                  ^
symbol_table_toolfunction.c: In function ‘searchStructTable’:
symbol_table_toolfunction.c:91:26: error: ‘SymbolNode’ has no member named ‘StackNext’
  for (; temp; temp = temp->StackNext) {
                          ^
symbol_table_toolfunction.c: In function ‘addSymbol’:
symbol_table_toolfunction.c:112:27: warning: initialization from incompatible pointer type [enabled by default]
  SymbolNode *stack_slot = kSymbolStackHead->symbol_head;
                           ^
symbol_table_toolfunction.c:134:32: warning: assignment from incompatible pointer type [enabled by default]
  kSymbolStackHead->symbol_head = stack_slot;
                                ^
symbol_table_toolfunction.c: In function ‘pushSymbolStack’:
symbol_table_toolfunction.c:143:18: error: ‘SymbolStackNode’ has no member named ‘funcptr’
  kSymbolStackHead->funcptr = NULL;
                  ^
symbol_table_toolfunction.c:144:18: error: ‘SymbolStackNode’ has no member named ‘symbolHead’
  kSymbolStackHead->symbolHead = NULL;
                  ^
symbol_table_toolfunction.c: In function ‘popSymbolStack’:
symbol_table_toolfunction.c:150:19: error: ‘SymbolStackNode’ has no member named ‘symbolHead’
  while (deleteNode->symbolHead){
                   ^
symbol_table_toolfunction.c:151:32: error: ‘SymbolStackNode’ has no member named ‘symbolHead’
   SymbolNode *temp = deleteNode->symbolHead;
                                ^
symbol_table_toolfunction.c:152:28: error: ‘SymbolNode’ has no member named ‘funcInfo’
   if (temp->is_func && temp->funcInfo.argumentNum > 0){
                            ^
symbol_table_toolfunction.c:153:13: error: ‘SymbolNode’ has no member named ‘funcInfo’
    free(temp->funcInfo.argumentType);
             ^
symbol_table_toolfunction.c:156:17: error: ‘SymbolNode’ has no member named ‘defInfo’
    freeType(temp->defInfo);
                 ^
symbol_table_toolfunction.c:158:13: error: ‘SymbolStackNode’ has no member named ‘symbolHead’
   deleteNode->symbolHead = deleteNode->symbolHead->stackNext;
             ^
symbol_table_toolfunction.c:158:38: error: ‘SymbolStackNode’ has no member named ‘symbolHead’
   deleteNode->symbolHead = deleteNode->symbolHead->stackNext;
                                      ^
make: *** [parser] Error 1
